<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SearchActivity"
    tools:showIn="@layout/activity_search">

    <TextView
        style="@style/search_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_find_criteria"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/platform_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/platform"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vg_platform"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/publisher_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/publisher"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vg_publisher"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/genre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/genre"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vg_genre"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vg_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/search_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_find_options"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/limit_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/limit"
                style="@style/input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/option_limit"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/offset_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/offset"
                style="@style/input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/option_offset"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:text="@string/find" />
</LinearLayout>